tests/test_assets/semantic/invalid/types/void_parameters.cog
bad_void_param::(value: void) {
}

bad_void_ptr_param::(value: void*) {
}