tests/test_assets/semantic/invalid/types/void_parameters.expected
semantic error at line 1: parameter cannot have type void
semantic error at line 4: parameter cannot have type void
2 semantic errors generated.
